--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,6 +12,8 @@ jobs:
     container:
       image: talex5/tla
     steps:
+    - run: pwd
+    - run: ls -a
     - run: find *.tla | xargs java -cp tla2tools.jar pcal.trans
   test:
     name: test model
