--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       image: talex5/tla
     steps:
     - run: pwd
+    - run: tree ../../
     - run: ls -a
     - run: find *.tla | xargs java -cp tla2tools.jar pcal.trans
   test:
