--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,7 @@ jobs:
     - run: ls ../
     - run: ls ../../
     - run: ls -a
+    - run: find **.tla
     - run: find *.tla | xargs java -cp tla2tools.jar pcal.trans
   test:
     name: test model
