--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     container:
       image: talex5/tla
+    defaults:
+        run:
+           working-directory: /
     steps:
     - run: pwd
     - run: ls ../
