--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,7 @@ jobs:
         run:
            working-directory: /
     steps:
+    - uses: actions/checkout@v4
     - run: pwd
     - run: ls ../
     - run: ls ../../
@@ -26,6 +27,7 @@ jobs:
     container:
       image: talex5/tla
     steps:
+    - uses: actions/checkout@v4
     - run: find *.tla | xargs java -cp tla2tools.jar tlc2.TLC
   lint:
     name: lint
