--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       image: talex5/tla
     steps:
     - uses: actions/checkout@v2
+    - run: find *.tla
     - run: find *.tla | xargs java -DTLA-Library=/usr/local/lib/tlaps/ pcal.trans
 
   model-checking:
